# fastapi-aiogram-notes

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  start.sh
alembic/: env.py
app/: database.py  main.py
app/api/v1/: __init__.py  auth.py  note.py  tg_profile.py  user.py
app/bot/: bot.py  main.py
app/core/: config.py
app/db/: database.py
app/dependencies/: __init__.py  dependencies.py
app/exceptions/: __init__.py  exceptions.py
app/models/: __init__.py  note.py  note_tag.py  tag.py  tg_profile.py  token.py  user.py
app/repositories/: __init__.py  interfaces.py  note_repository.py  tag_repository.py  user_repository.py
app/schemas/: __init__.py  note.py  note_schema.py  tag.py  tag_schema.py  tg_profile_schema.py  token_schema.py  user.py  user_schema.py
app/services/: __init__.py  auth_service.py  note_services.py  tag_service.py  tg_profile_services.py  user_services.py
app/usecases/: note.py
app/utils/: logger.py  password.py  utils.py
bot/: formater.py  logging_config.py  main.py
